harbor/kustomize/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.llucasshenrique.space`)
      kind: Rule
      services:
        - name: harbor-harbor-portal
          port: 80
    - match: Host(`harbor.llucasshenrique.space`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
      kind: Rule
      services:
      - name: harbor-harbor-core
        namespace: harbor
        port: 80
    - match: Host(`notary.llucasshenrique.space`)
      kind: Rule
      services:
      - name: harbor-harbor-notary-server
        namespace: harbor
        port: 4443
  tls:
    provider: cloudflare
    domains:
    - main: '*.llucasshenrique.space'
      sans:
        - 'llucasshenrique.space'
